# vita-epub-reader

./: .gitignore  BUILD_VERIFICATION.md  CMakeLists.txt  CMakeLists_simple.txt  CMakeLists_simple_build.txt  DEPLOYMENT_GUIDE.md  README.md  README_GITHUB.md  deploy.sh
.github/workflows/: build-and-release.yml  build-progressive.yml  test-build.yml
assets/fonts/: README.md
assets/sample_books/: README.md
include/: downloader.h  epub_parser.h  file_manager.h  gpu_renderer.h  memory_manager.h  text_renderer.h
sce_sys/: README.md
sce_sys/livearea/contents/: template.xml
src/: file_manager.cpp  main.cpp  main_simple.cpp
src/epub/: navigation.cpp  parser.cpp  renderer.cpp
src/graphics/: gpu_renderer.cpp
src/memory/: memory_manager.cpp
src/network/: downloader.cpp  ssl_handler.cpp
src/ui/: menu.cpp  reader.cpp  settings.cpp
